# rust-elm-type-gen

./: Cargo.toml  README.md
src/: cli_file_io.rs  lib.rs  main.rs  spec.rs
