[package]
name = "rust-cli-boilerplate"
version = "0.1.0"
authors = ["Kris Scott <kscott91@gmail.com>"]
edition = "2018"
description = "Boilerplate for Rust CLI program"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
polymorphio = { git = "https://github.com/krscott/polymorphio.git", tag = "v0.1.0"}
structopt = "0.3"
log = "0.4"
stderrlog = "0.4"